--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,4 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      uses: mattdavis0351/actions/docker-gpr@v1.3.0
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        image-name: frontend-ambulante
