--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,5 +10,5 @@ jobs:
       with:
         name: myDocker/repository
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }
+        password: ${{ secrets.DOCKER_PASSWORD }}
         tags: "latest,another"
